force-app/main/default/objects/Time__c/Time__c.object-meta.xml
<CustomObject>
    <description>Created by: MH
Business Unit: BTC - PM 
Purpose: Object used to track time for project tasks.</description>
    <label>Time</label>
    <nameField>
        <displayFormat>T- {00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>