force-app/main/default/objects/Time__c/fields/Bill_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate_Hourly__c</fullName>
    <description>Created By: MH
Business Unit: BTC-PM
Purpose: The Billable rate for the time spent on any given task.</description>
    <label>Bill Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>