force-app/main/default/objects/Time__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: MH
Business Unit: BTC-PM
Purpose: If the Checkbox is checked, the time collected is billable.</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>