force-app/main/default/objects/Time__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: MH
Business Unit: BTC-PM
Purpose: Lookup to Contact, Contact being the person documenting their time spent on any given task.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Times</relationshipLabel>
    <relationshipName>Times</relationshipName>
    <type>Lookup</type>
</CustomField>