force-app/main/default/objects/Time__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Created By: CC
Business Unit: BTC-PM
Purpose: Date of time record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>