force-app/main/default/objects/Time__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Created By: MH
Business Unit: BTC-PM
Purpose: Collects the number of hours spent for any given task.</description>
    <label>Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>