force-app/main/default/objects/Time__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Created By: MH
Business Unit: BTC-PM
Purpose: Any additional information that might be important.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>