force-app/main/default/objects/Time__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <description>Created By: MH
Business Unit: BTC-PM
Purpose: Master-Detail Relationship with the Project Task object.</description>
    <label>Project Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Times</relationshipLabel>
    <relationshipName>Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>